<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/edit_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView"/>

    <ImageView
        android:contentDescription="@string/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/currentImage"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/BlurButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur"/>
            <Button
                android:id="@+id/PixelateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pixelate" />
        </LinearLayout>
        <ImageButton
            android:src="@drawable/ic_action_camera"
            android:id="@+id/CameraButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/take_pic"
            android:layout_weight="1.85" />

        <ImageButton
            android:src="@drawable/ic_action_save"
            android:id="@+id/SaveButton"
            android:layout_width="31dp"
            android:layout_height="64dp"
            android:contentDescription="@string/save_pic"
            android:layout_weight="0.34"
            android:layout_gravity="center_vertical"
            android:clickable="false" />
    </LinearLayout>

</LinearLayout>
